# imdb_bert_project

./: .env  .env.example  .gitignore  Makefile  README.md  README_explanations.md  cline_context.md  pyproject.toml  requirements.txt  sample_reviews.txt  test_output.txt  test_results.txt
configs/: data_config.yaml  smoke_test.yaml  train.yaml
data/processed/: state.json
data/raw/: state.json
notebooks/: 02_model_training_evaluation.ipynb
notebooks/.ipynb_checkpoints/: 01_exploratory_data_analysis-checkpoint.ipynb
predictions/: prediction_result.json
predictions/explanations/: attention_matrix_layer_11_head_2.png.html
predictions/interactive_explanations/: attention_matrix_layer_11_head_2.png.html  explanation_report.md
report/: final_report.md
src/: __init__.py  display_predictions.py  evaluate.py  predict.py  test_explanations.py  train.py
src/data/: __init__.py  download_data.py  processor.py
src/imdb_bert_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: __init__.py  bert_classifier.py
src/utils/: __init__.py  config.py  explanation_manager.py  metrics.py  visualization.py
tests/: test_model_explanations.py  test_training.py
